--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>iscovery-server</artifactId>
+    <artifactId>discovery-server</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>discovery-server</name>
     <description>Discovery Server</description>
@@ -10,7 +10,7 @@
 
     <parent>
         <groupId>org.moduleap.spring.cloud</groupId>
-        <artifactId>spring-cloud-eureka</artifactId>
+        <artifactId>moduleap</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
